cli/tests/error_syntax.js.out
error: Uncaught SyntaxError: Unexpected identifier
(the following is a syntax error  ^^ ! )
     ~~~~~~~~~
    at [WILDCARD]tests/error_syntax.js:3:6
